--- a/docs/书法/文徵明-小楷千字文.md
+++ b/docs/书法/文徵明-小楷千字文.md
@@ -7,7 +7,7 @@ categories:
  - 书法
 ---
 
-# 文徵明-小楷千字文
+<Boxx/>
 
 ![Image_001]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/文徵明-小楷千字文/Image_001.png )
 
