--- a/docs/书法/多宝塔碑.md
+++ b/docs/书法/多宝塔碑.md
@@ -7,7 +7,7 @@ categories:
  - 书法
 ---
 
-# 多宝塔碑
+<Boxx/>
 
 ```
 《多宝塔碑》，全称《大唐西京千福寺多宝佛塔感应碑》，是唐天宝十一年（752年）由当时的文人岑勋撰文、书法家徐浩题额、书法家颜真卿书丹、碑刻家史华刻石而成，是楷书书法作品。现今保存于西安碑林第二室。
