--- a/docs/练习/笔名汉字频率分析.md
+++ b/docs/练习/笔名汉字频率分析.md
@@ -10,8 +10,7 @@ categories:
 
 <Boxx/>
 
-数据来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中关于本人笔名的记录。
-
+> 数据来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中关于本人笔名的记录。
 
 ## 1、笔名分析
 
