--- a/docs/轨迹/有感之杂说.md
+++ b/docs/轨迹/有感之杂说.md
@@ -4,8 +4,9 @@ date: 2022-03-25
 tags:
  - 练习
  - 明月
+ - 生活
 categories:
- -  轨迹
+ - 轨迹
 ---
 
 
@@ -113,6 +114,24 @@ categories:
 人是浩瀚宇宙、无限时空中的一粒尘埃。凡事别想太多，干就完了。但别想太少，防止被人卖了还帮数钱。
 生活、工作、娱乐是短暂生命中的一部分，注意相互平衡。首先保持身体健康，再者要充实生活，不能闲着。所谓：多读书，多睡觉，少吃零食多思考。
 --20210706
+```
+
+---
+
+> 身体是革命的本钱，健康是1，金钱、名誉、地位、房子、车子……这些都是0。 --20220426
+
+| 时间管理 | 重要    | 一般     | 不重要   |
+| ----     | ----    | -----    | -----    |
+| 紧急     | 吃饭    | 锻炼身体 | 休闲娱乐     |
+| 一般     | 学习、孝敬父母 | 工作     | 看电影、玩游戏  |
+| 不紧急   | 思考、理财     | 结婚生子 | 旅游  |
+
+```
+吃饭不积极，思想有问题。
+学而不思则罔，思而不学则殆。
+行胜于言，知行合一。
+人是一根有思想的芦苇。
+
 ```
 
 ---
