--- a/关于我.md
+++ b/关于我.md
@@ -5,8 +5,6 @@ tags:
  - ReadMe
  - 徐书法
  - 无为徐生
-categories:
- - 练习
 ---
 
 
@@ -35,7 +33,7 @@ categories:
 
 起初&ensp;对书法有兴趣 <br/>
 开始练字&ensp;找个地方记录练习历程 <br/>
-左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89.html )》 <br/>
+左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xushufa.cn/%E8%BD%A8%E8%BF%B9/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89-%E6%97%A0%E5%9B%BE%E7%89%88.html )》 <br/>
 
 后来&ensp;内容变多  <br/>
 倾诉欲更强&ensp;注册了公众号 <br/>
@@ -48,6 +46,8 @@ categories:
 ---
 
 <br/>
+
+
 
 ## 账号
 
@@ -72,26 +72,25 @@ categories:
 <br/>
 
 
-> 我的网站：徐书法 `xushufa.cn`
 
-**个人程序员笔记及书法练习轨迹。**
+## 网站
 
-| 徐书法 | 我的网站    |  备注          |
+> 博客网站
+
+**生活随笔-编程笔记-书法练习轨迹。**
+
+|        | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa]( https://xushufa.cn ) &ensp; [blog]( https://blog.xushufa.cn ) | 《书法练习轨迹》及博客网站。      |
-| 2      | [vuepress-calligraphy]( https://vuepress-calligraphy.xushufa.cn ) &ensp; [vuepress-blog]( https://vuepress-blog.xushufa.cn ) | `vuepress`构建的网站。|
-| 3      | [docsify-calligraphy]( https://docsify-calligraphy.xushufa.cn ) &ensp; [docsify-blog]( https://docsify-blog.xushufa.cn )     | `docsify`构建的网站。 |
-| 4      | [mkdocs-calligraphy]( https://mkdocs-calligraphy.xushufa.cn ) &ensp; [mkdocs-blog]( https://mkdocs-blog.xushufa.cn )         | `mkdocs`构建的网站。  |
-| 5      | [reco-calligraphy]( https://reco-calligraphy.xushufa.cn ) &ensp; [reco-blog]( https://reco-blog.xushufa.cn ) | `vuepress-theme-reco`构建的网站。     |
+| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习网站。 |
+| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。 |
+| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 
 ---
 
-
 <br/>
 
-
-> 相关网站
+> 工具网站
 
 **工具网站及网站地图。**
 
@@ -100,11 +99,12 @@ categories:
 | 1      | [tool.xushufa.cn]( https://tool.xushufa.cn ) | 工具网站。在线预览markdown、解析json、url解码、时间戳转换等。  |
 | 2      | [md.xushufa.cn]( https://md.xushufa.cn )     | xushufa网站地图，nginx网页目录结构。|
 
-
 ---
 
-
 <br/>
+
+
+
 
 > 个人邮箱 
 
@@ -112,4 +112,6 @@ categories:
 
 
 ---
+
+
 
